# Photometric-Reconstruction-Endoscopy

./: CMakeLists.txt  README.md
cpp/photometric_reconstruction/: CMakeLists.txt
cpp/photometric_reconstruction/src/: main.cpp
py/: calibration.py  errors.txt  main.py  photometric_model.py  utils.py
src/: main.cpp
